@@ -17,6 +17,7 @@
   + New DrawInto overloads with ParallelConfig parameter.
   + New Clear overload with ParallelConfig parameter.
   + New Quantize overload with ParallelConfig parameter.
+  + New Dither overload with ParallelConfig parameter.
 + BitmapDataFactory class:
   + New CreateBitmapData overloads.
 + ColorF struct:
